--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+
+
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #add8e6;
+    background-color: #f0f0f0; /* Change this to your desired color */
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
